--- a/.gitattributes
+++ b/.gitattributes
@@ -11,15 +11,15 @@ __CRIO__/metadata.json merge=copy-merge
 # backend/
 backend/db/products.db merge=copy-merge
 backend/routes/auth.js merge=copy-merge
-backend/routes/cart.js merge=copy-merge
-backend/routes/product.js merge=copy-merge
-backend/routes/user.js merge=copy-merge
 backend/package.json merge=copy-merge
 backend/package-lock.json merge=copy-merge
 backend/pnpm-lock.yaml merge=copy-merge
 
 # public/
+public/logo192.png merge=copy-merge
+public/logo512.png merge=copy-merge
 public/avatar.png merge=copy-merge
+public/icon-white.png merge=copy-merge
 public/index.html merge=copy-merge
 public/icon.svg merge=copy-merge
 public/robots.txt merge=copy-merge
@@ -31,10 +31,19 @@ src/setupTests.js merge=copy-merge
 
 
 # src/__tests__
+src/__tests__/Home.test.js merge=copy-merge
 src/__tests__/Login.test.js merge=copy-merge
 src/__tests__/App.test.js merge=copy-merge
 src/__tests__/Register.test.js merge=copy-merge
 src/__tests__/Cart.test.js merge=copy-merge
 src/__tests__/Checkout.test.js merge=copy-merge
-src/__tests__/Products.test.js merge=copy-merge
-src/__tests__/ProductCard.test.js merge=copy-merge
+src/__tests__/Product.test.js merge=copy-merge
+src/__tests__/Search.test.js merge=copy-merge
+
+# src/components
+src/components/Home.css merge=copy-merge
+src/components/Header.css merge=copy-merge
+src/components/Footer.css merge=copy-merge
+
+src/components/Thanks.js merge=copy-merge
+src/components/Footer.js merge=copy-merge 
