--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # testing
 /coverage
+junit.xml
 
 # production
 /build
@@ -22,11 +23,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-testReport.json
-.vercel
+yarn.lock
+.vscode/
 
-package-lock.json
-pnpm-lock.yaml
-
-# Local Netlify folder
 .netlify
+node_modules
+node_modules/
+backend/node_modules
+backend/node_modules/
