--- a/package.json
+++ b/package.json
@@ -1,48 +1,30 @@
 {
-  "name": "qkart-frontend-v2-hooks",
+  "name": "react-me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.17.10",
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.0.5",
-    "@mui/material": "^5.0.6",
-    "@mui/system": "^5.1.0",
-    "@testing-library/dom": "^8.13.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.24.0",
-    "type": "module",
-    "dotenv": "^16.0.3",
-    "history": "^5.1.0",
-    "nodemon": "^2.0.20",
-    "notistack": "^2.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "typescript": "^3.2.1",
-    "web-vitals": "^1.1.2"
-  },
-  "peerDependencies": {
-    "react-dom": "^17.0.2"
-  },
-  "jest": {
-    "resetMocks": false
+    "@ant-design/icons": "^4.2.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.6.4",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "history": "^5.0.0",
+    "jest-junit": "^11.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-test-renderer": "^16.13.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8081 react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --json --outputFile=testReport.json --watchAll=false",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -57,8 +39,6 @@
     ]
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.20.0",
-    "jest-localstorage-mock": "^2.4.18",
-    "jest-location-mock": "^1.0.9"
+    "enzyme": "^3.11.0"
   }
 }
